[gd_scene load_steps=2 format=2]

[ext_resource path="res://Nodes/Random.gd" type="Script" id=1]

[node name="Random node" type="GraphNode"]
anchor_right = 1.0
anchor_bottom = 0.5
margin_right = -749.0
margin_bottom = -44.0
rect_min_size = Vector2( 275, 256 )
size_flags_stretch_ratio = 0.0
custom_constants/port_offset = 0
title = "Random"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Firstrepeat" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 259.0
margin_bottom = 48.0

[node name="First" type="HBoxContainer" parent="Firstrepeat"]
margin_right = 119.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="First label" type="Label" parent="Firstrepeat/First"]
margin_top = 5.0
margin_right = 28.0
margin_bottom = 19.0
text = "First"

[node name="First checkbox" type="CheckBox" parent="Firstrepeat/First"]
margin_left = 32.0
margin_right = 56.0
margin_bottom = 24.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Repeat" type="HBoxContainer" parent="Firstrepeat"]
margin_left = 123.0
margin_right = 243.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Repeat label" type="Label" parent="Firstrepeat/Repeat"]
margin_top = 5.0
margin_right = 44.0
margin_bottom = 19.0
text = "Repeat"

[node name="Repeat checkbox" type="CheckBox" parent="Firstrepeat/Repeat"]
margin_left = 48.0
margin_right = 72.0
margin_bottom = 24.0
focus_mode = 0
enabled_focus_mode = 0

[node name="All" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 48.0
margin_right = 259.0
margin_bottom = 208.0

[node name="Separator" type="HSeparator" parent="All"]
margin_right = 243.0
margin_bottom = 4.0

[node name="ID label" type="Label" parent="All"]
margin_top = 8.0
margin_right = 243.0
margin_bottom = 22.0
text = "ID"

[node name="ID text" type="TextEdit" parent="All"]
margin_top = 26.0
margin_right = 243.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 30 )

[node name="Name label" type="Label" parent="All"]
margin_top = 60.0
margin_right = 243.0
margin_bottom = 74.0
text = "Name"

[node name="Name text" type="OptionButton" parent="All"]
margin_top = 78.0
margin_right = 243.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 30 )

[node name="Text label" type="Label" parent="All"]
margin_top = 112.0
margin_right = 243.0
margin_bottom = 126.0
text = "Text"

[node name="Text text" type="TextEdit" parent="All"]
margin_top = 130.0
margin_right = 243.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 30 )
size_flags_vertical = 3
wrap_enabled = true

[node name="HSeparator" type="HSeparator" parent="."]
visible = false
margin_left = 16.0
margin_top = 209.0
margin_right = 259.0
margin_bottom = 213.0

[node name="Button container" type="HBoxContainer" parent="."]
editor/display_folded = true
margin_left = 16.0
margin_top = 214.0
margin_right = 259.0
margin_bottom = 239.07
rect_min_size = Vector2( 0, 25.07 )

[node name="Remove" type="Button" parent="Button container"]
margin_right = 119.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "-"

[node name="Add" type="Button" parent="Button container"]
margin_left = 123.0
margin_right = 243.0
margin_bottom = 25.0
size_flags_horizontal = 3
text = "+"

[node name="HSeparator2" type="HSeparator" parent="."]
visible = false
margin_left = 16.0
margin_top = 240.0
margin_right = 259.0
margin_bottom = 244.0
[connection signal="close_request" from="." to="." method="_on_Random_node_close_request"]
[connection signal="resize_request" from="." to="." method="_on_Random_node_resize_request"]
[connection signal="resized" from="." to="." method="_on_Random_node_resized"]
[connection signal="pressed" from="Firstrepeat/First/First checkbox" to="." method="_on_First_checkbox_pressed"]
[connection signal="pressed" from="Firstrepeat/Repeat/Repeat checkbox" to="." method="_on_Repeat_checkBox_pressed"]
[connection signal="text_changed" from="All/ID text" to="." method="_on_ID_text_text_changed"]
[connection signal="text_changed" from="All/Text text" to="." method="_on_Text_text_text_changed"]
[connection signal="pressed" from="Button container/Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="Button container/Add" to="." method="_on_Add_pressed"]
